feat: refactor product DTOs and update file storage permissions
- Converts `ProductCreateRequest` to a Java record and updates `ProductService` to use record accessors.
- Sets `PUBLIC_READ` ACL on objects uploaded to NCP Object Storage to ensure public accessibility.
- Standardizes SpringDoc and OpenAPI documentation export configurations across the auction, file, and product services.
- Refines `PageableRequest` validation logic using `Math.clamp` and updates `ProductDetailResponse` to include starting price.